# Cerebro

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
models/: ddqn_best_checkpoint.pt  scaler.pkl  tcn_best_checkpoint.pt
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/adapters/: esp32_packet_parser.rs  file_session_repository.rs  mod.rs  onnx_inference_runner.rs  tgc_packet_parser.rs
src-tauri/src/commands/: headset.rs  mod.rs
src-tauri/src/domain/: eeg_packet.rs  errors.rs  focus_reading.rs  mod.rs  ports.rs  session_summary.rs
src-tauri/src/infrastructure/: app_state.rs  esp32_reader.rs  mod.rs  tauri_commands.rs  tgc_reader.rs
src-tauri/src/models/: ml_data.rs  mod.rs  tgc_data.rs
src-tauri/src/networking/: esp32_reader.rs  mod.rs  tgc_reader.rs
src-tauri/src/use_cases/: classify_eeg_packet.rs  manage_session_records.rs  mod.rs
src/adapters/: modelConfig.ts  tauriClassifierAdapter.ts  tauriHeadsetAdapter.ts  tauriSessionAdapter.ts  useHeadsetStore.ts  useModelStore.ts  useRecordingStore.ts  useSessionStore.ts
src/components/: AppSidebar.tsx  CodeView.tsx  chart-area-interactive.tsx  chart-line-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  site-header.tsx
src/domain/: eegReading.ts  index.ts  ports.ts  sessionMode.ts  sessionSummary.ts
src/hooks/: use-data-state.tsx  use-mobile.ts
(+55 files in other folders)
