[package]
name = "cerebro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cerebro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ONNX Runtime — download-binaries pulls the correct native library automatically,
# so no system-level ORT install is required.
# ndarray feature wires ort's ndarray tensor conversion impls.
# 0.15 matches the version ort 2.0.0-rc.11 uses internally.
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }

